--- a/templates/tutorials/viewTutorials.html
+++ b/templates/tutorials/viewTutorials.html
@@ -250,16 +250,26 @@
 </style>
 {% endblock %}
 {% block main-content %}
+<div class="mt-5">
+{% if messages %}
+    {% for k in messages%}
+    <div class="alert alert-{{k.tags}} alert-dismissible fade show" role="alert">
+        <b>{{ k }} !</b>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    {% endfor %}
+    {% endif %}
+</div>
 <main>
-    <div class="mt-5">
         <div class="card mb-4">
-            <div class="card-body">
+            <div class="card-header">
                 <!-- Grid row -->
                 <div class="row">
                     <!-- Grid column -->
                     <div class="col-md-8">
-                        <h2 class="pt-3 pb-4 text-center font-bold font-up deep-purple-text"
-                            style="color: rgb(66, 8, 8);">List of Tutorials</h2>
+                        <h2 style="color: rgb(0, 0, 0);">List of Tutorials</h2>
                     </div>
 
                     <div class="col-md-4">
@@ -269,12 +279,13 @@
 
                     <!-- Grid column -->
                 </div>
+                </div>
+                <div class="card-body">
                 <!-- Grid row -->
                 <form action="" method="post">{% csrf_token %}
                     <!--Table-->
                     <table class="table table-striped">
                         <!--Table head-->
-                        <thead>
                             <tr>
                                 <th>Course Title</th>
                                 <th>Course Description</th>
@@ -285,12 +296,10 @@
                                 <th class="text-center">Action</th>
                                 <th class="text-center">Archive</th>
                             </tr>
-                        </thead>
                         <!--Table head-->
                         <!--Table body-->
-                        <tbody>
                             {% for i in tutorials %}
-                            <tr>
+                            <tr class="main-row">
                                 <td>
                                     <p style="color: black;font-size: 14px;">{{i.Title}}</p>
                                 </td>
@@ -318,7 +327,6 @@
                                 </td>
                             </tr>
                             {% endfor %}
-                        </tbody>
                         <!--Table body-->
                     </table>
                     <!--Table-->
@@ -332,7 +340,7 @@
         </div>
 </main>
 <script type="text/javascript">
-    trlist = $("tbody>tr");
+    trlist = $(".main-row");
     $("body").on('input', "#searchbox", function () {
         trlist.hide();
         search = this.value.toLowerCase();
