--- a/templates/Exam/viewExams.html
+++ b/templates/Exam/viewExams.html
@@ -53,8 +53,8 @@
                         <!--Table body-->
                             {% for i in exams %}
                             <tr class="main-row">
-                                <td><p style="color: black;font-size: 14px;">{{i.Name}}</p></td>
-                                <td><p style="color: black;font-size: 14px;">{{i.course.courseName}}</p></td>
+                                <td>{{i.Name}}</td>
+                                <td>{{i.course.courseName}}</td>
                                 <td>{{i.Batch}}</td>
                                 <td>{{i.exam_date}}</td>
                                 <td>{{i.exam_duration}}</td>
