--- a/templates/Notes/addNotesTutor.html
+++ b/templates/Notes/addNotesTutor.html
@@ -63,15 +63,16 @@
                         <div class="col-lg-12 col-md-12 col-12 text-center">
                             <button id='submitBtn' name="submit" type="submit" class="btn btn-info">Add Note</button>
                         </div>
+                    </div>
                 </form>
             </div>
         </div>
     </div>
 </div>
 {% if notes %}
-<div class="mt-5 w-100">
+<div class="mt-5 row">
     <div class="col-md-12 col-12">
-        <div class="card statbox box box-shadow">
+        <div class="card">
             <div class="card-header">
                 <div class="row">
                     <div class="col-xl-12 col-md-12 col-12">
