--- a/templates/tutorials/ArchievedTutorials.html
+++ b/templates/tutorials/ArchievedTutorials.html
@@ -224,21 +224,23 @@
         {% endif %}
         <div class="mt-5">
             <div class="card mb-4">
-                <div class="card-body">
+                <div class="card-header">
                     <!-- Grid row -->
                     <div class="row">
                         <!-- Grid column -->
                         <div class="col-md-12">
-                            <h2 class="pt-3 pb-4 text-center font-bold font-up deep-purple-text" style="color: rgb(66, 8, 8);">Archived Tutorials</h2>
+                            <h2 style="color: rgb(0, 0, 0);">Archived Tutorials</h2>
                         </div>
                         <!-- Grid column -->
                     </div>
+                </div>
                     <!-- Grid row -->
+                    <div class="card-body">
                     <form method="post" action=" ">{% csrf_token %}
                         <!--Table-->
+                        <div class="table-responsive">
                         <table class="table table-striped">
                             <!--Table head-->
-                            <thead>
                                 <tr>
                                     <th>Course Name</th>
                                     <th>Course Id</th>
@@ -246,26 +248,24 @@
                                     <th>Delete</th>
                                     <th>Remove Archive</th>
                                 </tr>
-                            </thead>
                             <!--Table head-->
                             <!--Table body-->
-                            <tbody>
                                 {% for i in tutorials %}
                                 <tr class="tr">
                                     <td>{{i.Title}}</td>
                                     <td>{{i.id}}</td>
                                     <td>{{i.Duration}} Months</td>
-                                    <td>
+                                    <td class="text-center">
                                         <a href="{% url 'deletetutorial' i.id %}" class="btn btn-danger btn-sm">DELETE</a>
                                     </td>
-                                    <td>
+                                    <td class="text-center">
                                         <input type="checkbox" class="bigcheckbox" name="ids" value="{{i.id}}">
                                     </td>
                                 </tr>
                                 {% endfor %}
-                            </tbody>
                             <!--Table body-->
                         </table>
+                    </div>
                         <!--Table-->
                         <div class="form-group">
                             <input type="submit" value="Remove from Archive" class="btn btn-danger float-right">
