--- a/templates/tutorials/editTutorial.html
+++ b/templates/tutorials/editTutorial.html
@@ -263,100 +263,86 @@ input:focus{
    
 {% endblock %}
 {% block main-content %}
-<div>
-    {% if messages %}
-    <div class="alert alert-warning" role="alert">
-        <ul class="messages">
-            {% for k in messages %}
-            <li style="color: darkred;">{{ k }}</li>
-            {% endfor %}
-        </ul>
-    </div>
-    {% endif %}
-</div>
-<div class="mt-5">
-        <div class="card">
-            <div class="card-header">
-                <div class="row">
-                    <div class="col-sm">
-                        <h2 style="color: rgb(66, 8, 8);">Edit Course Tutorials</h2>
-                    </div>
-                </div>
+<div class="card mt-5">
+    <div class="card-header">
+        <div class="row">
+            <div class="col-sm">
+                <h2 style="color: rgb(0, 0, 0);">Edit Course Tutorials</h2>
             </div>
-            <div class="card-body">
-                <form action="" method="post" enctype= multipart/form-data>
-                    {% csrf_token %}
-                    <br>
-                   <div class="input-group form-group">
-                    <label class="control-label col-sm-4">Course Title<span class="text-danger">*</span></label>
-                    <div class="input-group-prepend">
-                        <span class="input-group-text"><i class="fas fa-user"></i></span>
-                    </div>
-                    <input type="text" class="form-control" id="firstName " name='title' placeholder="Course Title" value="{{tutorial.Title}}">
-                </div>
-                    <br>
-                     <div class="input-group form-group">
-                    <label class="control-label col-sm-4">Course Description<span class="text-danger">*</span></label>
-                    <div class="input-group-prepend">
-                        <span class="input-group-text"><i class="fas fa-user"></i></span>
-                    </div>
-                    <textarea type="text" class="form-control" id="firstName " name='description' placeholder="Course Description" rows="1" value="">{{tutorial.Description}}</textarea>
-                </div>
-                    <br>
-                    <br>
-                      <div class="input-group form-group">
-                    <label class="control-label col-sm-4">Course Fess<span class="text-danger">*</span></label>
-                    <div class="input-group-prepend">
-                        <span class="input-group-text"><i class="fas fa-user"></i></span>
-                    </div>
-                    <input type="number" class="form-control" id="firstName " name='fees' placeholder="Course Fees" value="{{tutorial.Fees}}">
-                </div>
-                    <br>
-                    <div class="form-group">
-                        <label class="control-label col-sm-4">Course Duration<br>( In Months )<span class="text-danger">*</span></label>
-                        <div class="col-sm-1" style="display: inline-block;margin-left:-2%;">
-                            <select id="no_of_installment" class="multiselect" name='duration'>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                                <option value="5">5</option>
-                                <option value="6">6</option>
-                            </select>
-                        </div>
-                    </div>
-                    
-                    <br>
-                  <div class="form-group">
-                        <label class="control-label col-sm-4"> Select Course <span class="text-danger">*</span></label>
-                        <div class="col-sm-4" style="display: inline-block;margin-left:-2%;">
-                            <select class="form-control" name="course">
-                            	{% for course in courses %}
-                                {% if course.courseName == tutorial.Course.courseName %}
-                                <option value="{{course.s_num}}" selected>{{course.courseName}}</option>
-                                {% else%}
-							  <option value="{{course.s_num}}">{{course.courseName}}</option>
-                              {% endif %}
-                            	{% endfor %}
-							</select>
-                        </div>
-                    </div>
-                    <br>
-                    <div class="input-group form-group">
-                        <label class="control-label col-sm-4">Discount (in %)</label>
-                        <input type="number" step="0.01" class="form-control col-sm-2" id="discount" name='feeDisc' placeholder="Discount (%)" value="{{tutorial.Discount}}">
-
-                        <label class="control-label col-sm-2 ml-sm-4">Validity</label>
-                        <input type="Date" class="form-control col-sm-3" id="validity" name='discValidity' placeholder="Val" value="{{tutorial.Validity}}">
-                    </div>
-                    <br><br>
-                    <div class="form-group text-center">
-                        <input type="submit" value="Save Tutorial" class="btn login_btn form-control">
-                    </div>
-                </form>
-            </div>
-            <br>
         </div>
+    </div>
+    <div class="card-body">
+        <form action="" method="post" enctype=multipart/form-data>
+            {% csrf_token %}
+            <br>
+            <div class="row">
+                <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+                    <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Course Title<span
+                            class="text-danger">*</span></label>
+                    <input type="text" class="form-control" id="firstName " name='title' placeholder="Course Title"
+                        required="" value="{{tutorial.Title}}">
+                </div>
+
+                <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+                    <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Course Fess<span
+                            class="text-danger">*</span></label>
+                    <input type="number" class="form-control" id="firstName " name='fees' placeholder="Course Fees"
+                        required="" value="{{tutorial.Fees}}">
+                </div>
+
+                <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+                    <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Course Duration<span
+                            class="text-danger">*</span></label>
+                    <select id="no_of_installment" class="custom-select form-control" name='duration' required>
+                        <option disabled selected value="{{tutorial.Duration}}">{{tutorial.Duration}}</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                    </select>
+                </div>
+
+                <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+                    <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Select Course<span
+                            class="text-danger">*</span></label>
+
+                    <select class="custom-select form-control" name="course" required>
+                        <option disabled selected value="{{tutorial.Course.courseName}}">{{tutorial.Course.courseName}}</option>
+                        {% for course in courses %}
+                        <option>{{course.courseName}}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+                <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+                    <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Discount (in %)<span
+                            class="text-danger">*</span></label>
+                    <input type="number" step="0.01" class="form-control" id="discount" name='feeDisc'
+                        placeholder="Discount (%)" required="" value="{{tutorial.Discount}}">
+                </div>
+
+                <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+                    <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Validity<span
+                            class="text-danger">*</span></label>
+                    <input type="Date" class="form-control" id="validity" name='discValidity' placeholder="Val"
+                        required="" value="{{tutorial.Validity}}">
+                </div>
+
+                <div class="col-md-12 col-lg-12 col-12 input-group form-group">
+                    <textarea type="text" class="form-control my-2 w-100" name='description'
+                        placeholder="Course Description" value="{{tutorial.Description}}">{{tutorial.Description}}</textarea>
+                </div>
+
+                <div class="col-lg-12 col-md-12 col-12 text-center">
+                    <button id='submitBtn' name="submit" type="submit" class="btn btn-info">Save Tutorial</button>
+                </div>
+            </div>
+        </form>
+    </div>
+    <br>
+</div>
+
 </div>
 <script>
     function Enableddl(install)
