--- a/templates/tutorials/editTutorialVideosTutor.html
+++ b/templates/tutorials/editTutorialVideosTutor.html
@@ -1,4 +1,4 @@
-{% extends 'dashboard/dashboardTutor.html' %}
+{% extends 'dashboard/Tutor-dashboard.html' %}
 {% load static %}
 {% block css %}
 <style>
@@ -116,80 +116,65 @@ td{
   
 </style>
 {% endblock %}
-{% block body %}
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCBJybI10-Xa43-F5GSad1i0Y9W3yqlW6Q&libraries=places&v=3" defer></script>
+{% block main-content %}
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCBJybI10-Xa43-F5GSad1i0Y9W3yqlW6Q&libraries=places&v=3"
+    defer></script>
 
-<div class="container">
+<div class="mt-5">
     {% if errors %}
     <div class="alert alert-danger" role="alert">
         <div id='errorsBox'>
             <div>
-                <h5 style="color: red;text-shadow:-0.5px -0.5px 0 #000,0.5px -0.5px 0 #000,-0.5px 0.5px 0 #000,0.5px 0.5px 0 #000;">Error !</h5>
+                <h5
+                    style="color: red;text-shadow:-0.5px -0.5px 0 #000,0.5px -0.5px 0 #000,-0.5px 0.5px 0 #000,0.5px 0.5px 0 #000;">
+                    Error !</h5>
                 <ul>
                     {% for x in errors %}
                     <li>{{ x }}</li>
                     {% endfor %}
-                </ul>   
+                </ul>
             </div>
         </div>
     </div>
     {% endif %}
-    <div class="d-flex justify-content-center h-100">
-        <div class="card">
-            <div class="card-header">
-                <div class="row">
-                    <div class="col-sm-4"><h2 style="color: rgb(66, 8, 8);">Edit Videos</h2></div>
+    <div class="card">
+        <div class="card-header">
+            <div class="row">
+                <div class="col-sm-4">
+                    <h2 style="color: rgb(0, 0, 0);">Edit Videos</h2>
+                </div>
             </div>
         </div>
-        <div class="card-body container">
-            <form id='submitForm' method='post' enctype= multipart/form-data>{% csrf_token %}
-                <div id='mainForm' class="container">
-                    <div id='entry1'>
-                        <table class="table table-borderless">
-                            <thead>
-                                <th>Add Video*</th>
-                                <th>Video Title*</th>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>
-                                        <input type="file" name="video">
-                                    </td>
-                                    <td>
-                                  <div class="form-group">
-                                    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Enter Title" required="" name="title" value="{{tutorial.Title}}">
-                                  </div>                                        
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td colspan="2">
-                                  <div class="form-group">
-                                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" required="" name="description">{{tutorial.Description}}</textarea>
-                                  </div>                                        
-                                    </td>                    
-                                </tr>
-                            </tbody>
-                        </table>
+        <div class="card-body">
+            <form id='submitForm' method='post' enctype=multipart/form-data>{% csrf_token %}
+                <div class="row">
+                    <div class="col-md-6 col-lg-5 col-12 input-group form-group">
+                        <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Add Video<span
+                                class="text-danger">*</span></label>
+                        <div class="w-100 col-sm-7 col-7">
+                            <input type="file" class="custom-file-input" id="validatedCustomFile" required name="video">
+                            <label class="custom-file-label" for="validatedCustomFile">Choose file...</label>
+                        </div>
                     </div>
-                </div>
-                <hr>
-                <div class="form-group">
-                    <label class="control-label col-sm-4"><span class="text-danger">Note :</span></label>
-                    <div class="col-md-12">
-                        <span class="text-muted">
-                            By clicking Sign Up, you agree to our <a href="#">Terms</a> and that you have read our <a href="#">Policy</a>, including our <a href="#">Cookie Use</a>.
-                        </span>
+
+                    <div class="col-md-6 col-lg-5 col-12 input-group form-group">
+                        <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Video Title<span
+                                class="text-danger">*</span></label>
+                        <input type="text" class="form-control" name="title" value="{{tutorial.Title}}">
                     </div>
-                </div>
-                <div class="row container d-flex justify-content-end">
-                    <div class="col-sm-2 sm-ml-1">
-                        <button name="submit" type="submit" class="btn btn-warning">Save Video</button>
+
+
+                    <div class="col-md-12 col-lg-12 col-12 input-group form-group">
+                        <textarea type="text" class="form-control my-2 w-100"
+                            name="description">{{tutorial.Description}}</textarea>
+                    </div>
+                    <div class="col-lg-12 col-md-12 col-12 text-center">
+                        <button id='submitBtn' name="submit" type="submit" class="btn btn-info">Save Video</button>
                     </div>
                 </div>
             </form>
         </div>
     </div>
-</div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script type="text/javascript">
